# ngl-clone

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 3f213ce9c728_create_users_table.py  c5b738adbdf7_create_categories_links_messages.py
src/: config.py  database.py  main.py  models.py  schemas.py
src/routers/: __init__.py  users.py
src/services/: users.py
